objects/tc9_p__Payee__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Details_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To keep track of this Portal Users Bank Details</description>
        <label>Bank Details Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Type_Selected__c</fullName>
        <label>Bank Type Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Option_Selected__c</fullName>
        <label>Fund Option Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APRA/RSA</fullName>
                </value>
                <value>
                    <fullName>SMSF</fullName>
                </value>
                <value>
                    <fullName>Employer Nominated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Own_TFN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to control the users ability to enter their TFN or indicate reason for not having TFN. If payee has TFN this checkbox will be ticked.</description>
        <inlineHelpText>Checkbox used  to control the users ability to enter their TFN or indicate reason for not having TFN. If payee has TFN this checkbox will be ticked</inlineHelpText>
        <label>Has Own TFN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_TFN_Reason__c</fullName>
        <label>No TFN Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separate Application made to ATO</fullName>
                </value>
                <value>
                    <fullName>Under 18</fullName>
                </value>
                <value>
                    <fullName>Receipt of Pension, Benefit or Allowance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Tax_Declaration_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Declaration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Tax_Declaration_Date__c</fullName>
        <description>Stamped when the user in the portal ticks the Tax Declaration Complete checkbox</description>
        <label>Portal Tax Declaration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Super_Details_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To keep track of the Portal Users Super completion</description>
        <label>Super Details Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFN_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To keep track of the Portal Users TFN status</description>
        <label>TFN Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_2c9_Portal_Agreement_Logic__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the Portal will use logic to validate whether a Payee can complete a timesheet depending on the 2c9 Portal Payee Agreement status being set to Complete</description>
        <inlineHelpText>Check this box if you wish to enforce the 2c9 Portal to validate whether this Payee can complete a timesheet depending on the Complete status of the Agreements listed on this Payee record.</inlineHelpText>
        <label>Use 2c9 Portal Agreement Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2c9_Portal_Payee_Agreement_Status__c</fullName>
        <description>The overall status of Agreements listed for this Payee is captured in this field. If no Agreements exist OR all Agreements are Complete then this status is Complete, else, status is Incomplete</description>
        <inlineHelpText>The overall status of Agreements listed for this Payee is captured in this field. If no Agreements exist OR all Agreements are Complete then this status is Complete, else, status is Incomplete</inlineHelpText>
        <label>2c9 Portal Payee Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2c9_Portal_Payee_Agreement_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to TRUE the Agreements listed on this Payee record will be visible on the 2c9 Portal for this Payee.</description>
        <inlineHelpText>If set to TRUE the Agreements listed on this Payee record will be visible on the 2c9 Portal for this Payee.</inlineHelpText>
        <label>2c9 Portal Payee Agreement Visible</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>